packages/cw-schema-codegen/tests/snapshots/python_tpl__simple_enum-2.snap
---
source: packages/cw-schema-codegen/tests/python_tpl.rs
expression: output
---
# This code is @generated by cw-schema-codegen. Do not modify this manually.

import typing
import decimal
from pydantic import BaseModel, RootModel, Base64Bytes



class python_tpl_UnitStructure(RootModel):
    """
    This is a struct level documentation for unit struct
    """
    root: None
