packages/cw-schema-codegen/tests/snapshots/python_tpl__simple_enum-4.snap
---
source: packages/cw-schema-codegen/tests/python_tpl.rs
expression: output
---
# This code is @generated by cw-schema-codegen. Do not modify this manually.

import typing
import decimal
from pydantic import BaseModel, RootModel, Base64Bytes



class python_tpl_NamedStructure(BaseModel):
    """
    This is a struct level documentation for named structure
    """
    
    a: str
    """
    # `a` field docs
    """
    
    b: int
    """
    # `b` field docs
    """
    
    c: python_tpl_SomeEnum
    """
    # `c` field docs
    """
    

# This code is @generated by cw-schema-codegen. Do not modify this manually.

import typing
import decimal
from pydantic import BaseModel, RootModel

class python_tpl_SomeEnum(RootModel):
    """
    This is a struct level documentation for enum type
    """



    class Field1(RootModel):
        """
        Field1 docs
        """
        root: typing.Literal['Field1']



    class Field2(BaseModel):
        """
        Field2 docs
        """
        Field2: typing.Tuple[int, int]



    class Field3(BaseModel):
        class __Inner(BaseModel):
            """
            Field3 docs
            """
            
            a: str
            """
            `a` field docs
            """
            
            b: int
            """
            `b` field docs
            """
            
        Field3: __Inner



    class Field4(BaseModel):
        """"""
        Field4: typing.Union[int, typing.Tuple[int]]


    root: typing.Union[  Field1,  Field2,  Field3,  Field4,  ]
